--- a/client/app/index.html
+++ b/client/app/index.html
@@ -25,7 +25,7 @@
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav pull-right">
               <li><a ng-href="#/">Home</a></li>
               <li><a ng-href="#/movies">Movies</a></li>
             </ul>
@@ -50,7 +50,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/lodash/lodash.js"></script>
+    <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/restangular/dist/restangular.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
